--- a/style.css
+++ b/style.css
@@ -21,3 +21,37 @@ li a {
 li a:hover {
     background-color: #111;
 }
+
+h1{
+    position: absolute;
+    top: 60%;
+    left: 43%;
+}
+h1+p{
+    position: absolute;
+    top: 65%;
+    left: 19%;
+}
+div#breaking {
+    display: inline-block;
+    width: 33%;
+    font-size: 1.5em;
+    text-align: center;
+    position: absolute;
+    top: 10%;
+    left: 35%;
+}
+.news {
+    display: inline-block;
+    width: 25%;
+    position: absolute;
+    bottom:0%;
+    left: 50%;
+}
+
+body > div.content > div:nth-child(3){
+    left: 25%;
+}
+body{
+    background-color: #F4FCC2;
+}
